--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/drawer": "^6.4.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "react": "18.0.0",
-    "react-native": "0.69.0"
+    "react-native": "0.69.0",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-wheel-color-picker": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -19,6 +29,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.0",
+    "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
