--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,9 @@ target 'GamificationTasks' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  # react-native-sqlite-storage
+  pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
