--- a/ios/GamificationTasks/Info.plist
+++ b/ios/GamificationTasks/Info.plist
@@ -51,5 +51,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>UIAppFonts</key>
+  <array><string>MaterialCommunityIcons.ttf</string>
+  </array>
 </dict>
 </plist>
