--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@types/react-native-vector-icons": "^6.4.11",
     "react": "18.0.0",
     "react-native": "0.69.0",
     "react-native-dropdown-picker": "^5.4.2",
@@ -22,6 +23,8 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-wheel-color-picker": "^1.2.0"
   },
   "devDependencies": {
