--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@types/react-native-vector-icons": "^6.4.11",
+    "dot-object": "^2.1.4",
     "react": "18.0.0",
     "react-native": "0.69.0",
     "react-native-draggable-flatlist": "^3.1.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-localize": "^2.2.2",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
@@ -32,6 +34,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/dot-object": "^2.1.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.0",
     "@types/react-native-sqlite-storage": "^5.0.2",
