--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,9 @@ target 'GamificationTasks' do
   # react-native-sqlite-storage
   pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
 
+  # rn-fetch-blob
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
