--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-share": "^7.6.4",
     "react-native-sound": "^0.11.2",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-wheel-color-picker": "^1.2.0"
+    "react-native-wheel-color-picker": "^1.2.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
