--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dot-object": "^2.1.4",
     "react": "18.0.0",
     "react-native": "0.69.0",
+    "react-native-document-picker": "^8.1.1",
     "react-native-draggable-flatlist": "^3.1.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
